--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,41 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    background: url(bg.png);
+}
 
+.main {
+    margin: auto;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
 
+#commentbox {
+    width: 300px;
+    height: 100px;
+}
+
+#users {
+    text-align: left;
+}
+
+#users li {
+    background-color: white;
+}
+
+#users li:hover {
+    background-color: #bd1c2b;
+}
+
+#users li:hover a {
+    color: white;
+}
 
 
 
